--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <div class="my-name">
 
                 <h1 class="first">Reynardt Cloete.</h1>
-                <h1 class="second">I build things for the web..</h1>
+                <h1 class="second">I build things for the web.</h1>
 
             </div>
 
