--- a/index.html
+++ b/index.html
@@ -31,16 +31,12 @@
                 <span class="number">01.</span> About
             </a> 
 
-            <a href="#experience" class="nav-link"> 
-                <span class="number">02.</span> Experience
-            </a> 
-
             <a href="#projects" class="nav-link"> 
-                <span class="number">03.</span> Projects
+                <span class="number">02.</span> Projects
             </a> 
                                  
             <a href="#contact" class="nav-link"> 
-                <span class="number">04.</span> Contact
+                <span class="number">03.</span> Contact
             </a>                                                          
         
             <div>
@@ -56,7 +52,9 @@
         </div>
 
     </header>
+
 <!--------------------------------------------------------------------------------------------------------------------------------------------->
+
     <main>
 
         <section id="hero">
@@ -83,7 +81,9 @@
             </div>
 
         </section>
+
     <!------------------------------------------------------------------------------------------------------------------------------------------>
+
         <section id="about">
 
             <div class="numbered-heading">
@@ -151,25 +151,96 @@
 
         </section>
 
+    <!------------------------------------------------------------------------------------------------------------------------------------------>
 
+        <section id="projects">
 
+            <div class="numbered-heading">
+                <h2><span class="about-number">02.</span> Things I've built</h2>
+            </div>
 
+            <div class="projects-content">
 
+                <div class="project-card">
 
+                    <img class="project-image" src="./public/Google.png" alt="Project Image">
 
+                    <div class="card-overlay">
 
+                        <h3>Featured Project</h3>
+                        <h2>Google Home Page</h2>
+                        <p>A minimal, dark theme for the Google home page.</p>
 
+                        <ul>
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <li>JS</li>
+                        </ul>
 
-        <section class="experience">
-            EXPERIENCE
+                        <div class="project-links">
+                            <i class="fa-brands fa-github"></i>
+                            <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </div>
+
         </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <!------------------------------------------------------------------------------------------------------------------------------------------>
 
         <section class="projects">
             PROJECTS
         </section>
 
     </main>
+
 <!--------------------------------------------------------------------------------------------------------------------------------------------->
+
     <footer>
 
         CONTACT
