--- a/index.html
+++ b/index.html
@@ -60,11 +60,25 @@
         <div class="side-bars">
 
             <div class="bar-1">
-                <i class="fa-brands fa-github"></i>
-                <i class="fa-brands fa-instagram"></i>
-                <i class="fa-brands fa-linkedin-in"></i>
-                <i class="fa-brands fa-youtube"></i>
+
+                <a class="social-link" href="#" target="_blank">
+                    <i class="fa-brands fa-github"></i>
+                </a>
+
+                <a class="social-link" href="#" target="_blank">
+                    <i class="fa-brands fa-instagram"></i>
+                </a>
+
+                <a class="social-link" href="#" target="_blank">
+                    <i class="fa-brands fa-linkedin-in"></i>
+                </a>
+
+                <a class="social-link" href="#" target="_blank">
+                    <i class="fa-brands fa-youtube"></i>
+                </a>
+
                 <div class="vertical-line"></div>
+
             </div>
 
             <div class="bar-2">
@@ -314,7 +328,27 @@
 
     <footer>
 
-        FOOTER
+        <div class="footer-icons">
+
+             <a class="social-link" href="#" target="_blank">
+                <i class="fa-brands fa-github"></i>
+            </a>
+
+            <a class="social-link" href="#" target="_blank">
+                <i class="fa-brands fa-instagram"></i>
+            </a>
+
+            <a class="social-link" href="#" target="_blank">
+                <i class="fa-brands fa-linkedin-in"></i>
+            </a>
+
+            <a class="social-link" href="#" target="_blank">
+                <i class="fa-brands fa-youtube"></i>
+            </a>
+
+        </div>
+
+        <p>Designed by Brittany Chiang. Built from scratch by Reynardt Cloete.</p>
 
     </footer>
 
