--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
             <div class="bar-1">
 
-                <a class="social-link" href="#" target="_blank">
+                <a class="social-link" href="https://github.com/ReynardtCloete" target="_blank">
                     <i class="fa-brands fa-github"></i>
                 </a>
 
@@ -69,11 +69,11 @@
                     <i class="fa-brands fa-instagram"></i>
                 </a>
 
-                <a class="social-link" href="#" target="_blank">
+                <a class="social-link" href="https://www.linkedin.com/in/reynardt-cloete-105417b8/" target="_blank">
                     <i class="fa-brands fa-linkedin-in"></i>
                 </a>
 
-                <a class="social-link" href="#" target="_blank">
+                <a class="social-link" href="https://www.youtube.com/@reynardtcloete6959" target="_blank">
                     <i class="fa-brands fa-youtube"></i>
                 </a>
 
@@ -82,7 +82,7 @@
             </div>
 
             <div class="bar-2">
-                <a class="vertical-email">recceray@gmail.com</a>              
+                <a class="vertical-email" href="mailto:recceray@gmail.com">recceray@gmail.com</a>              
                 <div class="vertical-line"></div>
             </div>
         
@@ -109,7 +109,7 @@
             </p>
 
             <div class="contact-btn">
-                <a>Contact me</a>
+                <a href="https://youtu.be/dQw4w9WgXcQ">Click me. Go ahead...</a>
             </div>
 
         </section>
@@ -315,7 +315,7 @@
                 I'll try my best to get back to you!</p>
 
                 <div>
-                    <a class="email-button">Say Hello</a>
+                    <a class="email-button" href="mailto:recceray@gmail.com">Say Hello</a>
                 </div>
 
             </div>
@@ -330,7 +330,7 @@
 
         <div class="footer-icons">
 
-             <a class="social-link" href="#" target="_blank">
+             <a class="social-link" href="https://github.com/ReynardtCloete" target="_blank">
                 <i class="fa-brands fa-github"></i>
             </a>
 
@@ -338,11 +338,11 @@
                 <i class="fa-brands fa-instagram"></i>
             </a>
 
-            <a class="social-link" href="#" target="_blank">
+            <a class="social-link" href="https://www.linkedin.com/in/reynardt-cloete-105417b8/" target="_blank">
                 <i class="fa-brands fa-linkedin-in"></i>
             </a>
 
-            <a class="social-link" href="#" target="_blank">
+            <a class="social-link" href="https://www.youtube.com/@reynardtcloete6959" target="_blank">
                 <i class="fa-brands fa-youtube"></i>
             </a>
 
