--- a/index.html
+++ b/index.html
@@ -147,25 +147,25 @@
                     </div>
 
                     <div class="about-icons">
-                        <!-- Core Frontend Technologies -->              
-                            <p class="tag">HTML5</p>
-                            <p class="tag">CSS3</p>
-                            <p class="tag">TailwindCSS</p>
-                            <p class="tag">JavaScript</p>                   
-                        <!-- Frontend Frameworks / Libraries -->           
-                            <p class="tag">React JS</p>
-                            <p class="tag">Svelte</p>
-                            <p class="tag">Vue JS</p>
-                            <p class="tag">NEXT JS</p>                   
+                        <!-- Core Frontend Technologies -->           
+                            <p class="tag tag1">>HTML5</p>
+                            <p class="tag tag1">CSS3</p>
+                            <p class="tag tag1">TailwindCSS</p>
+                            <p class="tag tag1">JavaScript</p>                   
+                        <!-- Frontend Frameworks / Libraries -->         
+                            <p class="tag tag2">React JS</p>
+                            <p class="tag tag2">Svelte</p>
+                            <p class="tag tag2">Vue JS</p>
+                            <p class="tag tag2">NEXT JS</p>                   
                         <!-- Backend & Services -->
-                            <p class="tag">Node JS</p>
-                            <p class="tag">Express JS</p>
-                            <p class="tag">Firebase</p>                   
+                            <p class="tag tag3">Node JS</p>
+                            <p class="tag tag3">Express JS</p>
+                            <p class="tag tag3">Firebase</p>                   
                         <!-- Databases -->
-                            <p class="tag">PostgreSQL</p>
-                            <p class="tag">Prisma</p>
+                            <p class="tag tag4">PostgreSQL</p>
+                            <p class="tag tag4">Prisma</p>
                         <!-- DevOps / Deployment -->
-                            <p class="tag">Docker</p>
+                            <p class="tag tag5">Docker</p>
                     </div>
 
                 </div>
@@ -191,13 +191,20 @@
                 <div class="project-card">
 
                     <div class="project-header">
-                        <i class="fa-brands fa-github"></i>
-                        <i class="fa-solid fa-arrow-up-right-from-square"></i>
+
+                        <a href="https://github.com/ReynardtCloete/google-home-page">
+                            <i class="fa-brands fa-github"></i>
+                        </a>
+
+                        <a href="https://rey-google-home-page.netlify.app/">
+                            <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                        </a>
+
                     </div>
 
                     <h3>Building the Google home page with dark theme</h3>
 
-                    <p>A single Google landing page to practice some pure responsive html and css</p>
+                    <p>A single Google landing page to practice some pure responsive html and css.</p>
 
                     <ul class="project-tools">
                         <li>HTML</li>
@@ -209,17 +216,25 @@
                 <div class="project-card">
 
                     <div class="project-header">
-                        <i class="fa-brands fa-github"></i>
-                        <i class="fa-solid fa-arrow-up-right-from-square"></i>
+
+                        <a href="https://github.com/ReynardtCloete/personal-portfolio-site">
+                            <i class="fa-brands fa-github"></i>
+                        </a>
+
+                        <a href="https://rey-portfolio-demo.netlify.app/">
+                            <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                        </a>
+
                     </div>
 
-                    <h3>Building the Google home page with dark theme</h3>
+                    <h3>Brittany Chiang-inspired Portfolio Website</h3>
 
-                    <p>A single Google landing page to practice some pure responsive html and css</p>
+                    <p>A minimal and beautiful portfolio website solidified in html and css.</p>
 
                     <ul class="project-tools">
                         <li>HTML</li>
                         <li>CSS</li>
+                        <li>JS</li>
                     </ul>
 
                 </div>
@@ -231,9 +246,9 @@
                         <i class="fa-solid fa-arrow-up-right-from-square"></i>
                     </div>
 
-                    <h3>Building the Google home page with dark theme</h3>
+                    <h3>Project coming real soon... Exciting things ahead.</h3>
 
-                    <p>A single Google landing page to practice some pure responsive html and css</p>
+                    <p>Currently working on learning some new tools. Hang tight!</p>
 
                     <ul class="project-tools">
                         <li>HTML</li>
@@ -249,27 +264,9 @@
                         <i class="fa-solid fa-arrow-up-right-from-square"></i>
                     </div>
 
-                    <h3>Building the Google home page with dark theme</h3>
+                    <h3>Project coming real soon... Exciting things ahead.</h3>
 
-                    <p>A single Google landing page to practice some pure responsive html and css</p>
-
-                    <ul class="project-tools">
-                        <li>HTML</li>
-                        <li>CSS</li>
-                    </ul>
-
-                </div>
-                <!-------------------------------->
-                <div class="project-card">
-
-                    <div class="project-header">
-                        <i class="fa-brands fa-github"></i>
-                        <i class="fa-solid fa-arrow-up-right-from-square"></i>
-                    </div>
-
-                    <h3>Building the Google home page with dark theme</h3>
-
-                    <p>A single Google landing page to practice some pure responsive html and css</p>
+                    <p>Currently working on learning some new tools. Hang tight!</p>
 
                     <ul class="project-tools">
                         <li>HTML</li>
@@ -285,9 +282,27 @@
                         <i class="fa-solid fa-arrow-up-right-from-square"></i>
                     </div>
 
-                    <h3>Building the Google home page with dark theme</h3>
+                    <h3>Project coming real soon... Exciting things ahead.</h3>
 
-                    <p>A single Google landing page to practice some pure responsive html and css</p>
+                    <p>Currently working on learning some new tools. Hang tight!</p>
+
+                    <ul class="project-tools">
+                        <li>HTML</li>
+                        <li>CSS</li>
+                    </ul>
+
+                </div>
+                <!-------------------------------->
+                <div class="project-card">
+
+                    <div class="project-header">
+                        <i class="fa-brands fa-github"></i>
+                        <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                    </div>
+
+                    <h3>Project coming real soon... Exciting things ahead.</h3>
+
+                    <p>Currently working on learning some new tools. Hang tight!</p>
 
                     <ul class="project-tools">
                         <li>HTML</li>
