--- a/index.html
+++ b/index.html
@@ -245,13 +245,18 @@
                 <div class="project-card">
 
                     <div class="project-header">
-                        <i class="fa-brands fa-github"></i>
+
+                        <a href="https://github.com/ReynardtCloete/course-notes-js">
+                            <i class="fa-brands fa-github"></i>
+                        </a>    
+
                         <i class="fa-solid fa-arrow-up-right-from-square"></i>
+
                     </div>
 
-                    <h3>Project coming real soon... Exciting things ahead.</h3>
+                    <h3>Ultimate Vanilla Javascript Tutorial</h3>
 
-                    <p>Currently working on learning some new tools. Hang tight!</p>
+                    <p>A deep dive into JavaScript. Tutorial by SuperSimpleDev.</p>
 
                     <ul class="project-tools">
                         <li>HTML</li>
